--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "node": "10.0.0"
+    "node": "^11.0.0"
   },
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.3",
-    "express": "^4.16.3",
-    "express-react-views": "^0.10.5",
-    "method-override": "^2.3.10",
-    "pg": "^7.4.3",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "cloudinary": "^1.14.0",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "express-react-views": "^0.11.0",
+    "js-sha256": "^0.9.0",
+    "method-override": "^3.0.0",
+    "multer": "^1.4.2",
+    "mysql": "^2.17.1",
+    "package.json": "^2.0.1",
+    "pg": "^7.12.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
