--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "mysql2": "^1.7.0",
     "package.json": "^2.0.1",
     "pg": "^7.12.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "sequelize": "^5.19.8"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.5.1"
   }
 }
